manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-telemetry-deployment
spec:
  selector:
    matchLabels:
      app: telemetry-service
  template:
    metadata:
      labels:
        app: telemetry-service
    spec:
      containers:
      - name: telemetry-container
        image: todoclusteracr001.azurecr.io/axion-telemetry-service:868 
        ports:
        - containerPort: 8000
