manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-service
spec:
  selector:
    app: telemetry-service
  ports:
  - port: 8080
    targetPort: 8000
