manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telemetry-ingress
  labels:
    app.kubernetes.io/name: telemetry-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: telemetry.krishomtrendstore.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: telemetry-service
            port: 
              number: 8080
